--- a/heroku/Pages/Login.html
+++ b/heroku/Pages/Login.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <!---<title> Simple Website Design | CodingLab </title>--->
-    <link rel="stylesheet" href="styleLogin.css">
+    <link rel="stylesheet" href="css/styleLogin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/Login.js"></script>
