--- a/heroku/Pages/Login.html
+++ b/heroku/Pages/Login.html
@@ -11,6 +11,7 @@
 </head>
 
 
+<body>
 <h2>Weekly Coding Challenge #1: Sign in/up Form</h2>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
@@ -58,6 +59,10 @@
 		</div>
 	</div>
 </div>
+</body>
+
+
+
 
 <footer>
 	<p>
