--- a/heroku/Pages/Login.html
+++ b/heroku/Pages/Login.html
@@ -2,7 +2,9 @@
 <!-- Created By CodingLab - www.codinglabweb.com -->
 <html lang="en" dir="ltr">
 
-<link rel="stylesheet" href="css/styleLogin.css">
+<head>
+    <link rel="stylesheet" href="css/styleLogin.css">
+</head>
 
 <h2>Weekly Coding Challenge #1: Sign in/up Form</h2>
 <div class="container" id="container">
