--- a/heroku/Pages/Login.html
+++ b/heroku/Pages/Login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/styleLogin.css">
+<link rel="stylesheet" type="text/css" href="../Pages/css/styleLogin.css">
 </head>
 <body>
 
