--- a/heroku/Pages/Login.html
+++ b/heroku/Pages/Login.html
@@ -3,6 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <meta charset="utf-8">
+
+
     <link rel="stylesheet" type="text/css" href="../assets/css/styleLogin.css">
     <link rel="stylesheet" type="text/css" href="main.css"><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
   </head>
@@ -42,6 +44,6 @@
         </div>
       </div>
     </div>
-    <script src="main.js"></script>
+    <script src="../assets/js/login.js"></script>
   </body>
 </html>
