--- a/heroku/Pages/DashBoard.html
+++ b/heroku/Pages/DashBoard.html
@@ -64,77 +64,14 @@
                 </div>
                 <div class="app-body-main-content">
                     <section class="service-section">
-                        <h2>Service</h2>
+                        <h2>Deposito</h2>
                         <div class="service-section-header">
                             <div class="search-field">
-                                <i class="ph-magnifying-glass"></i>
-                                <input type="text" placeholder="Account number">
-                            </div>
-                            <div class="dropdown-field">
-                                <select>
-                                    <option>Home</option>
-                                    <option>Work</option>
-                                </select>
-                                <i class="ph-caret-down"></i>
+                                <input type="number" placeholder="Valor a depositar">
                             </div>
                             <button class="flat-button">
-                                Search
+                                depositar
                             </button>
-                        </div>
-                        <div class="mobile-only">
-                            <button class="flat-button">
-                                Toggle search
-                            </button>
-                        </div>
-                        <div class="tiles">
-                            <article class="tile">
-                                <div class="tile-header">
-                                    <i class="ph-lightning-light"></i>
-                                    <h3>
-                                        <span>Electricity</span>
-                                        <span>UrkEnergo LTD.</span>
-                                    </h3>
-                                </div>
-                                <a href="#">
-                                    <span>Go to service</span>
-                                    <span class="icon-button">
-                                        <i class="ph-caret-right-bold"></i>
-                                    </span>
-                                </a>
-                            </article>
-                            <article class="tile">
-                                <div class="tile-header">
-                                    <i class="ph-fire-simple-light"></i>
-                                    <h3>
-                                        <span>Heating Gas</span>
-                                        <span>Gazprom UA</span>
-                                    </h3>
-                                </div>
-                                <a href="#">
-                                    <span>Go to service</span>
-                                    <span class="icon-button">
-                                        <i class="ph-caret-right-bold"></i>
-                                    </span>
-                                </a>
-                            </article>
-                            <article class="tile">
-                                <div class="tile-header">
-                                    <i class="ph-file-light"></i>
-                                    <h3>
-                                        <span>Tax online</span>
-                                        <span>Kharkov 62 str.</span>
-                                    </h3>
-                                </div>
-                                <a href="#">
-                                    <span>Go to service</span>
-                                    <span class="icon-button">
-                                        <i class="ph-caret-right-bold"></i>
-                                    </span>
-                                </a>
-                            </article>
-                        </div>
-                        <div class="service-section-footer">
-                            <p>Services are paid according to the current state of the currency and tariff.</p>
                         </div>
                     </section>
                 </div>
