ajuste novo site

--- a/heroku/Pages/DashBoard.html
+++ b/heroku/Pages/DashBoard.html
@@ -20,8 +20,10 @@
                         </h1>
                     </div>
                 </div>
+                
                 <div class="app-header-navigation">
                 </div>
+
                 <div class="app-header-actions">
                     <button class="user-profile">
                         <span>Matheo Peterson</span>
@@ -29,11 +31,19 @@
                             <img src="https://assets.codepen.io/285131/almeria-avatar.jpeg" />
                         </span>
                     </button>
+                    <div class="app-header-actions-buttons">
+                        <span>$00,00</span>
+                        <button class="icon-button large">
+                            <i class="ph-bell"></i>
+                        </button>
+                    </div>
+                </div>
                 <div class="app-header-mobile">
                     <button class="icon-button large">
                         <i class="ph-list"></i>
                     </button>
                 </div>
+
             </header>
             <div class="app-body">
                 <div class="app-body-navigation">
@@ -75,6 +85,8 @@
                         </div>
                     </section>
                 </div>
+
+
                 <div class="app-body-sidebar">
                     <section class="transfer-section">
                         <div class="transfer-section-header">
