--- a/heroku/Pages/Login.html
+++ b/heroku/Pages/Login.html
@@ -4,29 +4,33 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../assets/css/styleLogin.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css"><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="main">
       <div class="container a-container" id="a-container">
-        <form class="form" id="a-form" method="" action="">
+        <form class="form" id="a-form" method="post" action="../assets/php/create_user.php">
           <h2 class="form_title title">Criar Conta</h2>
           <span class="form__span">Tipo de conta</span>
-          <select class="select-css" placeholder="Tipo de Conta">
-            <option>Conta Corrente</option>
-            <option>Conta Poupança</option>
+          <select name="selectcount"  value="selectcount" class="select-css" placeholder="Tipo de Conta" required>
+            <option value="1" >Conta Corrente</option>
+            <option value="1" >Conta Poupança</option>
           </select>
-          <input class="form__input" type="text" placeholder="Email">
-          <input class="form__input" type="password" placeholder="Password">
-          <button class="form__button button submit">INSCREVER-SE</button>
+          <input name="nome"  class="form__input" type="text" placeholder="Nome" required>
+          <input name="email" class="form__input" type="email" placeholder="Email" required>
+          <input name="senha" class="form__input" type="password" placeholder="Senha" required>
+          <button type="submit"  class="form__button button submit">INSCREVER-SE</button>
         </form>
       </div>
       <div class="container b-container" id="b-container">
-        <form class="form" id="b-form" method="" action="">
+        <form class="form" id="b-form" method="get" action="../assets/php/Login.php">
           <h2 class="form_title title">Entre para planeta Cybert</h2>
-          <input class="form__input" type="text" placeholder="Email">
-          <input class="form__input" type="password" placeholder="Password"><a class="form__link">esqueceu a senha ?</a>
-          <button class="form__button button submit">ENTRAR</button>
+          <input name="nome"  class="form__input" type="text" placeholder="Nome" required>
+          <input name="email"  class="form__input" type="email" placeholder="Email" required>
+          <input name="senha"  class="form__input" type="password" placeholder="Senha" required>
+          <button type="submit" class="form__button button submit">ENTRAR</button>
         </form>
       </div>
       <div class="switch" id="switch-cnt">
