--- a/heroku/Pages/DashBoard.html
+++ b/heroku/Pages/DashBoard.html
@@ -51,7 +51,7 @@
             <div class="app-body">
                 <div class="app-body-navigation">
                     <nav class="navigation">
-                        <a onclick="changeHome()" href="#">
+                        <a id="Home" href="#">
                             <i class="ph-browsers"></i>
                             <span>Home</span>
                         </a>
