teste jquery min

--- a/heroku/Pages/DashBoard.html
+++ b/heroku/Pages/DashBoard.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="jquery-3.6.0.min.js"></script>
         <script src="../assets/js/dashboar.js"></script>
         <link rel="stylesheet" type="text/css" href="../assets/css/styleDashboard.css">
         <link rel="stylesheet" type="text/css" href="main.css"><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
