teste captura com jquery

--- a/heroku/Pages/DashBoard.html
+++ b/heroku/Pages/DashBoard.html
@@ -52,19 +52,19 @@
             <div class="app-body">
                 <div class="app-body-navigation">
                     <nav class="navigation">
-                        <a id="Home" href="#">
+                        <a onclick="" href="#">
                             <i class="ph-browsers"></i>
                             <span>Home</span>
                         </a>
-                        <a  href="#">
+                        <a onclick=""  href="#">
                             <i class="ph-check-square"></i>
                             <span>Saque</span>
                         </a>
-                        <a  href="#">
+                        <a onclick=""  href="#">
                             <i class="ph-swap"></i>
                             <span>Transferencia</span>
                         </a>
-                        <a  href="#">
+                        <a onclick=""  href="#">
                             <i class="ph-file-text"></i>
                             <span>Deposito</span>
                         </a>
@@ -76,7 +76,7 @@
                         </div>
                     </footer>
                 </div>
-                <div class="app-body-main-content">
+                <div id="container" class="app-body-main-content">
                     <section class="service-section">
                         <h2>Deposito</h2>
                         <div class="service-section-header">
