--- a/heroku/Pages/Login.html
+++ b/heroku/Pages/Login.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
   <head>
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../assets/css/styleDashboard.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/styleLogin.css">
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css"><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
