--- a/heroku/Pages/Login.html
+++ b/heroku/Pages/Login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
   <head>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../assets/css/styleLogin.css">
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
