--- a/heroku/Pages/DashBoard.html
+++ b/heroku/Pages/DashBoard.html
@@ -50,19 +50,19 @@
             <div class="app-body">
                 <div class="app-body-navigation">
                     <nav class="navigation">
-                        <a onclick="" href="#">
+                        <a onclick="changeHome()" href="#">
                             <i class="ph-browsers"></i>
                             <span>Home</span>
                         </a>
-                        <a onclick=""  href="#">
+                        <a onclick="changeSaque()"  href="#">
                             <i class="ph-check-square"></i>
                             <span>Saque</span>
                         </a>
-                        <a onclick=""  href="#">
+                        <a onclick="changeTransferencia()"  href="#">
                             <i class="ph-swap"></i>
                             <span>Transferencia</span>
                         </a>
-                        <a onclick=""  href="#">
+                        <a onclick="changeDeposito()"  href="#">
                             <i class="ph-file-text"></i>
                             <span>Deposito</span>
                         </a>
