--- a/heroku/Pages/DashBoard.html
+++ b/heroku/Pages/DashBoard.html
@@ -4,8 +4,8 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="../assets/css/styleDashboard.css">
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="main.css"><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -50,7 +50,7 @@
             <div class="app-body">
                 <div class="app-body-navigation">
                     <nav class="navigation">
-                        <a id="Home" onclick="changeHome()" href="#">
+                        <a id='Home' onclick="changeHome()" href="#">
                             <i class="ph-browsers"></i>
                             <span>Home</span>
                         </a>
