--- a/heroku/Pages/DashBoard.html
+++ b/heroku/Pages/DashBoard.html
@@ -50,7 +50,7 @@
             <div class="app-body">
                 <div class="app-body-navigation">
                     <nav class="navigation">
-                        <a id='Home' href="#">
+                        <a onclick="teste()" id='Home' href="#">
                             <i class="ph-browsers"></i>
                             <span>Home</span>
                         </a>
