--- a/heroku/Pages/DashBoard.html
+++ b/heroku/Pages/DashBoard.html
@@ -50,11 +50,11 @@
             <div class="app-body">
                 <div class="app-body-navigation">
                     <nav class="navigation">
-                        <a id='Home' href="#">
+                        <a class="pages" id='Home'>
                             <i class="ph-browsers"></i>
                             <span>Home</span>
                         </a>
-                        <a id='Saque' href="#">
+                        <a id='Saque'>
                             <i class="ph-check-square"></i>
                             <span>Saque</span>
                         </a>
