--- a/heroku/Pages/DashBoard.html
+++ b/heroku/Pages/DashBoard.html
@@ -50,9 +50,9 @@
             <div class="app-body">
                 <div class="app-body-navigation">
                     <nav class="navigation">
-                        <a class="pages" id='Home'>
-                            <i class="ph-browsers"></i>
-                            <span>Home</span>
+                        <a id='Home' value='1' class="pages" id='Home'>
+                            <i id='' class="ph-browsers"></i>
+                            <span id=''>Home</span>
                         </a>
                         <a id='Saque'>
                             <i class="ph-check-square"></i>
