teste id jquery

--- a/heroku/Pages/DashBoard.html
+++ b/heroku/Pages/DashBoard.html
@@ -51,8 +51,8 @@
                 <div class="app-body-navigation">
                     <nav class="navigation">
                         <a id='Home' value='1' class="pages" id='Home'>
-                            <i id='' class="ph-browsers"></i>
-                            <span id=''>Home</span>
+                            <i id='Home2' class="ph-browsers"></i>
+                            <span id='Home3'>Home</span>
                         </a>
                         <a id='Saque'>
                             <i class="ph-check-square"></i>
