ajuste id jquery

--- a/heroku/Pages/DashBoard.html
+++ b/heroku/Pages/DashBoard.html
@@ -50,21 +50,21 @@
             <div class="app-body">
                 <div class="app-body-navigation">
                     <nav class="navigation">
-                        <a id='Home' value='1' class="pages" id='Home'>
-                            <i id='Home2' class="ph-browsers"></i>
-                            <span id='Home3'>Home</span>
+                        <a class="pages">
+                            <i class="ph-browsers"></i>
+                            <span id='Home'>Home</span>
                         </a>
-                        <a id='Saque'>
+                        <a>
                             <i class="ph-check-square"></i>
-                            <span>Saque</span>
+                            <span id='Saque'>Saque</span>
                         </a>
-                        <a id='Transferencia' href="#">
+                        <a>
                             <i class="ph-swap"></i>
-                            <span>Transferencia</span>
+                            <span id='Transferencia'>Transferencia</span>
                         </a>
-                        <a id="Deposito"  href="#">
+                        <a>
                             <i class="ph-file-text"></i>
-                            <span>Deposito</span>
+                            <span id="Deposito" >Deposito</span>
                         </a>
                     </nav>
                     <footer class="footer">
