--- a/heroku/Pages/Login.html
+++ b/heroku/Pages/Login.html
@@ -4,9 +4,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../assets/css/styleLogin.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="main.css"><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
+    <script src="../assets/js/login.js"></script>
   </head>
   <body>
     <div class="main">
@@ -48,6 +49,5 @@
         </div>
       </div>
     </div>
-    <script src="../assets/js/login.js"></script>
   </body>
 </html>
